# polymath-mcp

./: .env.example  .gitignore  KNOWLEDGE_CHECKLIST.md  Polymath MCP 지식 카테고리.txt  README.md  claude_desktop_config.example.json  pyproject.toml
knowledge/00-Fusion-Patterns/: assumption-subversion.md  boundary-concept.md  dialectical-synthesis.md  metaphorical-transfer.md  scale-jump.md  structural-isomorphism.md  temporal-transformation.md
knowledge/01-Fusion-Cases/: behavioral-economics.md  bioinformatics.md  cognitive-science.md  computational-neuroscience.md  evolutionary-game-theory.md  information-thermodynamics.md  network-science.md
knowledge/02-Concepts/: complexity.md  emergence.md  entropy.md  equilibrium.md  feedback.md  optimization.md
knowledge/03-Polymaths/: claude-shannon.md  gottfried-leibniz.md  herbert-simon.md  john-von-neumann.md  leonardo-da-vinci.md
knowledge/04-Big-Questions/: complexity-origins.md  consciousness.md  free-will.md  nature-of-time.md  origin-of-life.md
prompts/: 01-information-research-prompt.md  02-complexity-research-prompt.md
scripts/: index_knowledge.py  reseed_chroma.py  run_ngrok_server.py  seed_neo4j.py  setup.py
src/: __init__.py  http_server.py  server.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  chroma_store.py  neo4j_store.py
src/engines/: __init__.py  adaptive_difficulty.py  fusion_engine.py  learning_path.py  llm_questioner.py  rag_pipeline.py  session_manager.py  socratic_engine.py  socratic_engine_v2.py
src/models/: __init__.py  concept.py  dialogue.py  fusion.py
src/tools/: __init__.py  exploration.py  fusion.py  socratic.py  socratic_v2.py
