[project]
name = "polymath-mcp"
version = "0.1.0"
description = "Polymath MCP - A fusion thinking support system for concept engineering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["mcp", "rag", "knowledge-graph", "fusion-thinking", "socratic-dialogue"]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "chromadb>=0.4.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "python-frontmatter>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
